css/style.css
body{
    padding: 0;
    margin: 0;
    font-family: Verdana, sans-serif;
}
address {
  display: block;
  font-style: italic;
}
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: white;
  }
  
  li {
    float: left;
  }
  
  li a {
    display: block;
    color: #670F4C;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-weight: 400;
  }
  
  
  li a:hover {
    background-color: #361F33;
    color: white;
  }

.icon{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    background-color: #670F4C;
    color: white;
    width: 100%;
    height: 2%;
}

.booking{
  height: 600px;
  width: 100%;
  background-image: url("../images/background.jpg");
  background-size: 100% 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

/*Search*/
.field-container{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  color: white;
  background-color: #361F33;
  opacity: 0.9;
  width: 55%;
  height: 30%;
  padding: 20px;
}

.active{
  background-color: #CE225A;
  color: white;
  border-radius: 5;
}

.search{
  width: 30%;
  height: 15%;
  border-radius: 10;
}

.site-deals{
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 300px;
  margin-left: 60px;
}

.last-post{
  width: 35%;
  background-image: url("../images/usa.jpg");
  background-size: 100% 100%;
  border-radius: 20px;
  box-shadow: 2px 2px 2px;
}

.title{
  padding-left: 20px;
  color: white;
}

.price{
  padding: 10px;
  background-color: #CE225A;
  color: white;
  float: right;
  border-radius: 20px;
}

.image-link{
  text-decoration: none;
}

